syntax = "proto3";

package user;

option go_package = "api/proto;user";

import "api/googleapis/google/api/annotations.proto";

service UserService {
  rpc GetUsers (GetUsersRequest) returns (GetUsersResponse) {
    option (google.api.http) = {
      get: "/users"
    };
  }

  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {
    option (google.api.http) = {
      post: "/users",
      body: "*"
    };
  }
}

message GetUsersRequest {}

message GetUsersResponse {
  repeated User users = 1;
}

message CreateUserRequest {
  string username = 1;
  string nickname = 2;
  string password = 3;
}

message CreateUserResponse {
  User user = 1;
}

message User {
  uint32 id = 1;
  string username = 2;
  string nickname = 3;
  string password = 4;
}
